2005-01-04  Geoffrey Garen  <ggaren@apple.com>
 
         Layout test for <rdar://problem/4214080> document.embeds: 
         embeds[0].Play() undefined at languageguide.org prevents audio playing 
         on mouseover
 
         * fast/dom/object-embed-plugin-scripting-expected.txt: Added.
         * fast/dom/object-embed-plugin-scripting.html: Added.
         * fast/dom/resources/articles.m4a: Added.
 
2006-01-04  Kimmo Kinnunen  <kimmo.kinnunen@nokia.com>

        Reviewed by eseidel.

        Updated layout tests after QRect (size & point) to Q*F change
        http://bugzilla.opendarwin.org/show_bug.cgi?id=4462

        * svg/W3C-SVG-1.1/animate-elem-02-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-03-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-04-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-05-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-06-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-07-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-08-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-09-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-10-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-11-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-12-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-13-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-14-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-15-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-16-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-17-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-18-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-19-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-20-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-21-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-22-b-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-23-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-24-t-expected.txt: