@@ -1,4 +1,12 @@
-2005-01-04  Geoffrey Garen  <ggaren@apple.com>
+2006-01-04  Geoffrey Garen  <ggaren@apple.com>
+
+        Layout test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6311
+        document.plugins doesn't exist
+
+        * fast/dom/HTMLDocument/document-plugins-expected.txt: Added.
+        * fast/dom/HTMLDocument/document-plugins.html: Added.
+
+2006-01-04  Geoffrey Garen  <ggaren@apple.com>
  
          Layout test for <rdar://problem/4214080> document.embeds: 
          embeds[0].Play() undefined at languageguide.org prevents audio playing 
